# Copyright 2019 codeboten
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = climate_neutral
description = Python library for GoClimateNeutral API
long_description = file: README.md
long_description_content_type = text/markdown
author = Alex Boten
author_email = alrex.boten@gmail.com
url = https://github.com/codeboten/climate_neutral
platforms = any
license = Apache-2.0
classifiers =
    Development Status :: 1 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.4
package_dir=
    =src
packages=find_namespace:
install_requires =
    requests >= 2.22.0

[options.packages.find]
where = src